--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "instagram-web-api": "^2.2.2",
     "node-html-to-image": "^3.2.0"
   }
 }
