--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
      
           script: | 
             cd projects/camara_bot_2.0
+            export PYTHONPATH="${PYTHONPATH}:/root/projects/camara_bot_2.0/orm_database"
             git pull origin main
             echo 'Deployment successful to digital ocean'
             python3 tasks/orchestration_flow.py 
