--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
             export PYTHONPATH="${PYTHONPATH}:/root/projects/camara_bot_2.0/orm_database"
             git pull origin main
             echo 'Deployment successful to digital ocean'
-            cd tasks
-            python3 orchestration_flow.py 
-            echo 'Register flow successful' 
+            pm2  restart 0
+            pm2  restart 1
+            pm2  restart camara_bot_flow
+            echo 'Restart flows' ' 
