--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy Prefect app
+      - name: Deploy changes into MAIN
         uses: appleboy/ssh-action@v0.1.2
         with:
           host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
@@ -15,11 +15,17 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
      
           script: | 
-            cd projects/camara_bot_2.0
-            export PYTHONPATH="${PYTHONPATH}:/root/projects/camara_bot_2.0/orm_database"
-            git pull origin main
+            cd projects/camara_bot_2.0 && git pull origin main
             echo 'Deployment successful to digital ocean'
-            pm2  restart 0
-            pm2  restart 1
-            pm2  restart camara_bot_flow
-            echo 'Restart flows' ' 
+            
+      - name: Restart APPs
+        uses: appleboy/ssh-action@v0.1.2
+        with:
+          host: ${{secrets.SSH_HOST}} # IP address of the server you wish to ssh into
+          key: ${{secrets.SSH_KEY}} # Private or public key of the server
+          username: ${{ secrets.SSH_USERNAME }} # User of the server you want to ssh into
+     
+          script: | 
+            pm2  restart all
+            echo 'Apps Restarteds'  
+
